feat: add pause and remove function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "armhf",
-        "journalctl"
+        "journalctl",
+        "mrunning",
+        "mstopped"
     ]
 }
